<resources>
    <string name="app_name">TFMControlClima</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="menu_1"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Sensors -->
    <string name="edit_sensor">Editar</string>
    <string name="temperature_title">Temperatura</string>
    <string name="fab_add_sensor">Añadir sensor</string>
    <string name="fab_add_routine">Añadir rutina</string>
    <string name="fab_add_plug">Añadir enchufe</string>
    <string name="title_activity_sensor_detail">SensorDetailActivity</string>
    <string name="title_activity_new_routine">NewRoutineActivity</string>
    <string name="condicion">Condicion</string>
    <string name="labelConditionName">Nombre</string>
    <string name="plugList">Enchufes disponibles</string>
    <string name="conditionRoutineText">Condición de la rutina</string>
    <string name="accion">Acción</string>
    <string name="no_routines">No tienes rutinas para este sensor añade alguna en el botón de abajo</string>
    <string name="bind_title">Vincular nuevo dispositivo</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnVincular">Vincular</string>
    <string name="labelWifiName">Nombre red wifi</string>
    <string name="labelWifiPassword">Contraseña red wifi</string>
    <string name="encontrado">!Dispositivo encontrado!</string>

</resources>