<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.tfm.control.climatizacion.sensor.routine.TemperatureConditionFragment">

    <LinearLayout
        android:id="@+id/newConditionForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:gravity="top|center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conditionRoutineText"
            android:textSize="30dp"></TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtNameRoutine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/labelConditionName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_title"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/txtTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="38sp"
            android:textStyle="bold"
            tools:text="15 ºC" />

        <com.google.android.material.slider.Slider
            android:id="@+id/rngTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="-20"
            android:valueTo="100" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menuCondition"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/condicion">

            <AutoCompleteTextView
                android:id="@+id/txtSetCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menuAction"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/accion">

            <AutoCompleteTextView
                android:id="@+id/txtSetAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsNewCondition"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:gravity="center|bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBackCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="Atras" />

        <Button
            android:id="@+id/btnNexCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="Continuar" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
